tests/macros/expand/plugin.stderr
error: option `plugin` does not exist for kind `expand`
 --> $DIR/plugin.rs:2:46
  |
2 |     let q = inquisition::questions![Expand { plugin: todo!() }];
  |                                              ^^^^^^
