tests/macros/expand/plugin.rs
fn main() {
    let q = inquisition::questions![Expand { plugin: todo!() }];
}
